@@ -9,6 +9,7 @@ racket/future: handling of internal stack overflow without
  'start-overflow-work log events
 racket/base: guarantee portable results for current-seconds
  and file-or-directory-modify-seconds
+compiler/zo-structs: added a context field to all-from-module
 
 Version 5.3.0.10
 racket/base: add progress-evt?, thread-cell-values?, prefab-key?,
